Update the implementation of finding Hamiltonian path in a DAG